팝업에서 페이지 타이틀 표시, "미투한 친구"/"미투한 친구 더보기" 클릭시 버그 수정

--- a/popup.html
+++ b/popup.html
@@ -16,16 +16,12 @@
     <div id="content">
       <div id="loading" style="display:none"></div>
       <div id="message" style="display:none"></div>
-      <dl id="page_info">
-        <dt>URL</dt>
-        <dd id="url"></dd>
-      </dl>
       <div>
+        <p id="title"></p>
         <a id="metoo_button" href="#">미투</a>
         <a id="metoo_count" href="#"></a>
-        <!-- 9명 영역(profile allocated users) -->
         <span id="metoo_list"></span>
-        <a id="metoo_list_to_post" href="">&gt;&gt;</a>
+        <a id="metoo_list_to_post" href="#">&gt;&gt;</a>
 	    </div>
     </div>
     <button onclick="Metoo.Popup.close();" >닫기</button>
