apply manifest_version 2 and commenting in progress

--- a/background.html
+++ b/background.html
@@ -7,11 +7,7 @@
     <script src="javascripts/metoo_plugin.js" type="application/javascript"></script>
     <script src="javascripts/page_info.js" type="application/javascript"></script>
     <script src="javascripts/button.js" type="application/javascript"></script>
-    <script type="application/javascript">
-      $(window).load(function() {
-        Metoo.Button.init();
-      });
-    </script>
+    <script src="javascripts/background.js" type="application/javascript"></script>
   </head>
   <body>
   </body>
