--- a/popup.html
+++ b/popup.html
@@ -8,22 +8,24 @@
     <script src="javascripts/metoo_plugin.js" type="application/javascript"></script>
     <script src="javascripts/page_info.js" type="application/javascript"></script>
     <script src="javascripts/popup.js" type="application/javascript"></script>
-    <script type="application/javascript">
-      document.addEventListener("DOMContentLoaded", Metoo.Popup.init, false);
-    </script>
   </head>
   <body>
     <div id="content">
-      <div id="loading" style="display:none"></div>
       <div id="message" style="display:none"></div>
       <div>
         <p id="title"></p>
         <a id="metoo_button" href="#">미투</a>
         <a id="metoo_count" href="#"></a>
         <span id="metoo_list"></span>
-        <a id="metoo_list_to_post" href="#">&gt;&gt;</a>
+        <a id="metoo_list_to_post" href="#">자세히</a>
+	    </div>
+	    <div>
+	      <textarea id="comment_body"></textarea>
+	      <input type="checkbox" id="pingback" />
+	      <label for="pingback">내 미투에도</label>
+	      <button id="write_comment">올리기</button>
 	    </div>
     </div>
-    <button onclick="Metoo.Popup.close();" >닫기</button>
+    <button id="close_popup">닫기</button>
   </body>
 </html>
